Working in the Js file

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 	  <div class="nav-wrapper">
 		<div class="nav-bg"></div>
 		<ul class="navbar-items">
-			<li><a href="#"> Portfolio </a></li>
-			<li><a href="#"> About </a></li>
-			<li><a href="#"> Contact </a></li>
+			<li><a href="#portfolio"> Portfolio </a></li>
+			<li><a href="#about"> About </a></li>
+			<li><a href="#contact"> Contact </a></li>
 		</ul>
 		<span class="close-menu">+</span>
 	  </div>
-      <button class="menu-phone">
+      <button class="menu-phone" type="button">
 	    <img src="./image/Enabled.png" alt="hamburger icon">
 	  </button>
     </nav>
@@ -34,15 +34,19 @@
 	<h2 class="social"> LET'S CONNECT </h2>    
 	<div class="social-media-icons">
 	  <ul>
-		<li><a href="https://twitter.com/" target="_blank"><img src="./image/Vector-twitter.svg" alt="twitter icon"></a></li>
-		<li><a href="https://www.linkedin.com/in/jean-walner-alexis-b05539175/" target="_blank"><img src="./image/linkedin-icon.svg" alt="Linkedin icon"></a></li>
-		<li><a href="https://github.com/AlexisJW" target="_blank"><img src="./image/Vector-m.svg" alt="icon"></a></li>
-		<li><a href="https://github.com/AlexisJW" target="_blank"><img src="./image/Vector-github.svg" alt="Github icon"></a></li>
-		<li><a href="https://web.facebook.com/profile.php?id=100001094813889" target="_blank"><img src="./image/Vector.svg" alt="Fingers icon"></a></li>
+		<li>
+		  <a href="https://twitter.com/" rel="noopener noreferrer" target="_blank"><img src="./image/Vector-twitter.svg" alt="twitter icon"></a>
+		</li>
+		<li>
+		  <a href="https://www.linkedin.com/in/jean-walner-alexis-b05539175/" rel="noopener noreferrer" target="_blank"><img src="./image/linkedin-icon.svg" alt="Linkedin icon"></a>
+		</li>
+		<li><a href="https://github.com/AlexisJW" rel="noopener noreferrer" target="_blank"><img src="./image/Vector-m.svg" alt="icon"></a></li>
+		<li><a href="https://github.com/AlexisJW" rel="noopener noreferrer" target="_blank"><img src="./image/Vector-github.svg" alt="Github icon"></a></li>
+		<li><a href="https://web.facebook.com/profile.php?id=100001094813889" rel="noopener noreferrer" target="_blank"><img src="./image/Vector.svg" alt="Fingers icon"></a></li>
 	  </ul>    
 	</div>     
   </section>
-  <section class="containers-works-section">
+  <section class="containers-works-section" id="portfolio">
    <div class="work-container">
 	  <div class="box" id="first-card">
 		 <img src="./image/snapshoot.png" alt="image card" class="snapshot">
@@ -69,7 +73,7 @@
 			   <li>css</li>
 			   <li>javaScript</li>
 		   </ul>
-		   <button class="see-project">See Project</button>
+		   <button class="see-project" type="button">See Project</button>
 		 </div>
 	   </div>
 	   <div class="box" id="second-card">
@@ -95,7 +99,7 @@
 			   <li> css </li>
 			   <li> javaScript </li>
 			 </ul>
-			 <button class="see-project"> See Project </button>
+			 <button class="see-project" type="button"> See Project </button>
 	      </div>
 	   </div>
 	   <div class="box">
@@ -121,7 +125,7 @@
 				 <li> css </li>
 				 <li> javaScript </li>
 			 </ul>
-			 <button class="see-project"> See Project </button>
+			 <button class="see-project" type="button"> See Project </button>
 		 </div>
 	   </div>
 	 <div class="box" id="fourth-card">
@@ -147,12 +151,12 @@
 			   <li> css </li>
 			   <li> javaScrip t</li>
 		   </ul>
-		   <button class="see-project"> See Project </button>
+		   <button class="see-project" type="button"> See Project </button>
 	   </div>
 	 </div>
     </div>
    </section>
-   <section class="about">
+   <section class="about" id="about">
       <div class="intro">
           <h2 class="title"> About Myself </h2>
           <p class="description">
@@ -163,22 +167,26 @@
           <div class="social-media">
               <span class="connect"> LET'S CONNECT </span>
               <div class="social-media-icons2">
-                  <ul>
-                     <li><a href="https://twitter.com/" target="_blank"><img src="./image/Vector-twitter.svg" alt="twitter icon"></a></li>
-					 <li><a href="https://www.linkedin.com/in/jean-walner-alexis-b05539175/" target="_blank"><img src="./image/linkedin-icon.svg" alt="Linkedin icon"></a></li>
-					 <li><a href="https://github.com/AlexisJW" target="_blank"><img src="./image/Vector-m.svg" alt="icon"></a></li>
-					 <li><a href="https://github.com/AlexisJW" target="_blank"><img src="./image/Vector-github.svg" alt="Github icon"></a></li>
-					 <li><a href="https://web.facebook.com/profile.php?id=100001094813889" target="_blank"><img src="./image/Vector.svg" alt="Fingers icon"></a></li>
-                  </ul>    
+                <ul>
+				  <li>
+				    <a href="https://twitter.com/" rel="noopener noreferrer" target="_blank"><img src="./image/Vector-twitter.svg" alt="twitter icon"></a>
+				  </li>
+				  <li>
+				    <a href="https://www.linkedin.com/in/jean-walner-alexis-b05539175/" rel="noopener noreferrer" target="_blank"><img src="./image/linkedin-icon.svg" alt="Linkedin icon"></a>
+				  </li>
+				  <li><a href="https://github.com/AlexisJW" rel="noopener noreferrer" target="_blank"><img src="./image/Vector-m.svg" alt="icon"></a></li>
+				  <li><a href="https://github.com/AlexisJW" rel="noopener noreferrer" target="_blank"><img src="./image/Vector-github.svg" alt="Github icon"></a></li>
+		          <li><a href="https://web.facebook.com/profile.php?id=100001094813889" rel="noopener noreferrer" target="_blank"><img src="./image/Vector.svg" alt="Fingers icon"></a></li>
+	            </ul>       
               </div>
           </div>
-          <button class="see-project"> Get My Resume </button>
+          <button class="see-project" type="button"> Get My Resume </button>
       </div>
   
       <ul class="language-program">
            <li>
               <span class="language-title"> LANGUAGES </span>
-              <button class="chevron-button">
+              <button class="chevron-button" type="button">
                  <img src="./image/chevron-down.png" alt="image chevron" class="chevron">
               </button>
 			  <ul class="language-list">
@@ -190,7 +198,7 @@
            <li>
 		     <div class="frameworks">
 			  <span class="frameworks-title"> Frameworks </span>
-			   <button class="chevron-button">
+			   <button class="chevron-button" type="button">
 			   <img src="./image/chevron-right.png" alt="framework-1" class="chevron">
 				</button>
 		     </div>
@@ -198,7 +206,7 @@
             <li>
 			  <div class="skills">
 			    <span class="skills-title"> Skills </span>
-			    <button class="chevron-button">
+			    <button class="chevron-button" type="button">
 			    <img src="./image/chevron-right.png" alt="framework-2" class="chevron">
 			    </button>
 			  </div>
@@ -206,7 +214,7 @@
       </ul>
       </div>
   </section>
-  <section class="contact">
+  <section class="contact" id="contact">
 	  <h2> Contact me </h2>
 	  <p> If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I’d love to help with it  </p>
 	  <form action="https://formspree.io/f/xyyvrjdz" method="post" class="contact-form">
@@ -216,5 +224,7 @@
 		 <button type="submit" class="button-submit"> Get in Touch </button>
 	   </form>
   </section>
+
+  <script src="index.js"></script>
 </body>
 </html>
