Add packages for linters Add linter config Lint code

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Alexis's portfolio </title>
     <link rel="stylesheet" href="StyleSheet.css">
@@ -11,7 +10,7 @@
 <body>
   <header class="header-containers">
     <nav>
-      <a class="logo"> Alexis </a> 
+      <a href="#" class="logo"> Alexis </a> 
 	  <div class="nav-wrapper">
 		<div class="nav-bg"></div>
 		<ul class="navbar-items">
