Worked for the dektop popup

--- a/index.html
+++ b/index.html
@@ -227,9 +227,11 @@
   <div id="myModal" class="modal">
     <div class="modal-content">
 	  <div class="primary-text-modal">
-		<span class="closeModal"> &times; </span>
-		<div class="works-elements">
+	    <div class="title-close-in-row">
 		  <h1 class="project-title"> Tonic </h1>
+		  <span class="closeModal"> &times; </span>
+		</div>
+		<div class="works-elements">
 		  <h2>
 			<div class="frame-client">
 			<span class="client"> CANOPY </span>
@@ -240,22 +242,33 @@
 			</div>
 		  </h2>
 		</div>
-		<img src="./image/snapshoot.png" alt="image card" class="snapshot">
-		<p class="details-modal">
-		  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essent
-		</p>
-		<ul class="technologie-label">
-		  <li>html</li>
-		  <li>css</li>
-		  <li>javaScript</li>
-		</ul>
-		<div class="button-in-row">
-		  <button class="see-project-modal-live" type="button"> See Live 
-		    <img src="./image/icon-live.png" alt="Live icon">
-		  </button>
-		  <button class="see-project-modal-git" type="button" id="icon-gitModal"> See Source 
-		    <img src="./image/vector-git.png" alt="Github icon">
-		  </button>
+		<img src="./image/snapshoot.png" alt="image card" class="snapshotModal">
+		<div class="right-left-block-in-row">
+		  <div class="left-block">
+		    <p class="details-modal">
+		     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essent
+		    </p>
+		  </div>
+		  <div class="right-block">
+		    <ul class="technologie-label">
+		      <li> html </li>
+		      <li> css </li>
+		      <li> javaScript </li>
+		    </ul>
+			<ul class="technologie-label" id="other-tech">
+		      <li> github </li>
+		      <li> ruby </li>
+		      <li> bootstrap </li>
+		    </ul>
+		    <div class="button-in-row">
+		      <button class="see-project-modal-live" type="button"> See Live 
+		        <img src="./image/icon-live.png" alt="Live icon">
+		      </button>
+		      <button class="see-project-modal-git" type="button" id="icon-gitModal"> See Source 
+		        <img src="./image/vector-git.png" alt="Github icon">
+		      </button>
+		    </div>
+		  </div>
 		</div>
 	  </div>
     </div>
