Make the required changes

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
   </section>
   <section class="containers-works-section" id="portfolio">
    <div class="work-container">
-    </div>
+
+   </div>
    </section>
    <section class="about" id="about">
       <div class="intro">
@@ -155,12 +156,16 @@
 		      <li> bootstrap </li>
 		    </ul>
 		    <div class="button-in-row">
-		      <button class="see-project-modal-live" type="button"> See Live 
-		        <img src="./image/icon-live.png" alt="Live icon">
-		      </button>
-		      <button class="see-project-modal-git" type="button" id="icon-gitModal"> See Source 
-		        <img src="./image/vector-git.png" alt="Github icon">
-		      </button>
+		      <a href="" class="link-live">
+			    <button class="see-project-modal-live" type="button"> See Live 
+		          <img src="./image/icon-live.png" alt="Live icon">
+		        </button>
+			  </a>
+		      <a href="" class="link-git">
+			    <button class="see-project-modal-git" type="button" id="icon-gitModal"> See Source 
+		          <img src="./image/vector-git.png" alt="Github icon">
+		        </button>
+			  </a>
 		    </div>
 		  </div>
 		</div>
