--- a/index.html
+++ b/index.html
@@ -110,9 +110,10 @@
   <section class="contact" id="contact">
 	  <h2> Contact me </h2>
 	  <p> If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I’d love to help with it  </p>
-	  <form action="https://formspree.io/f/xyyvrjdz" method="post" class="contact-form">
-		 <input type="text" name="name" placeholder="Enter your name" id="name" maxlength=30 required>
-		 <input type="email" name="user-email" placeholder="Enter your e-mail" id="user-email" required>
+	  <form action="https://formspree.io/f/xyyvrjdz" method="post" class="contact-form" id="contact-form">
+		 <input type="text" name="name" placeholder="Enter your name" id="name" maxlength=30>
+		 <input type="email" name="user-email" placeholder="Enter your e-mail" id="user-email">
+		 <small></small>
 		 <textarea name="message" id="text-area" cols="30" rows="10" placeholder="Write your message here" maxlength=500 required></textarea>
 		 <button type="submit" class="button-submit"> Get in Touch </button>
 	   </form>
